lib_LTLIBRARIES = libdoctree.la

libdoctree_la_SOURCES = \
	common.c \
	nodes.c \
	attributes.c \
	json.c \
	xml.c

libdoctree_la_CFLAGS = \
	-I../include

libdoctree_la_LDFLAGS = \
	-shared \
	-avoid-version

lib_LIBRARIES = libdoctree.a

libdoctree_a_SOURCES = \
	common.c \
	nodes.c \
	attributes.c \
	json.c \
	xml.c

libdoctree_a_CFLAGS = \
	-I../include
